# customer-manager

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  heroku.yml  pyproject.toml
app/api/: main.py  router.py
app/api/bank/: bank_data.py  bank_routers.py
app/api/customer/: customer_data.py  customer_routers.py
app/domain/bank/: bank_model.py
app/domain/customer/: customer_model.py
app/infraestructure/: base_model.py  database.py
config/: config.py  logging.yml  settings.yml
migrations/: env.py
migrations/versions/: 2a97fe126ac3_add_customers_table.py  4ea00da4876d_add_banks_table.py  cef2847ac4c5_add_customers_table.py
tests/: conftest.py  test_bank_crud.py  test_crud.py  test_customer_crud.py  test_main.py
